@@ -1,4 +1,4 @@
-\begin{thebibliography}{1}
+\begin{thebibliography}{10}
 
 \bibitem{björk2020}
 Tomas Björk.
@@ -21,6 +21,11 @@ Dustin Boswell and Trevor Foucher.
 김만중.
 \newblock 구운몽.
 \newblock 高麗書林, 1975.
+
+\bibitem{imahashi}
+𫝆𫞎姬, 𡈽𪧦, 𠮷田真.
+\newblock CJK統合漢字拡張🄑--🄓のテスト --- その🄰.
+\newblock 冬𠘨𫝷, 2024.
 
 \bibitem{nikos}
 Νίκος Καζαντζάκης.
