@@ -79,3 +79,25 @@
   publisher = "Snowman commedian Press",
   year      = 2020,
 }
+
+%% CJK統合漢字拡張B-Dのテスト
+@book{imahashi,
+  author    = "𫝆𫞎 姬 and 𡈽 𪧦 and 𠮷田 真",
+  yomi      = "Hime Imahashi",
+  title     = "CJK統合漢字拡張🄑--🄓のテスト --- その🄰",
+  publisher = "冬𠘨𫝷",
+  year      = 2024,
+}
+% 𫝆 U+2B746  CJK Unified Ideographs Extension D      AJ:13780
+% 𫞎 U+2B78E  CJK Unified Ideographs Extension D      AJ:13724
+% 姬 U+2F862  CJK Compatibility Ideographs Supplement AJ:13998
+% 𡈽 U+2123D  CJK Unified Ideographs Extension B      AJ:13953 J3-2F42
+% 𪧦 U+2A9E6  CJK Unified Ideographs Extension C      AJ:14145
+% 𠮷 U+20BB7  CJK Unified Ideographs Extension B      AJ:13706
+% 真 U+2F947  CJK Compatibility Ideographs Supplement AJ:13854
+% 冬 U+2F81A  CJK Compatibility Ideographs Supplement AJ:13954
+% 𠘨 U+20628  CJK Unified Ideographs Extension B      AJ:14105 J4-2332
+% 𫝷 U+2B777  CJK Unified Ideographs Extension D      AJ:13782
+% 🄑 U+1F111  Parenthesized Latin Capital Letter B
+% 🄓 U+1F113  Parenthesized Latin Capital Letter B
+% 🄰 U+1F130  Squared Latin Capital Letter A
