@@ -82,6 +82,15 @@
   publisher = "Snowman commedian Press",
   year      = 2020,
 }
+
+%% CJK統合漢字拡張B-Dのテスト
+@book{imahashi,
+  author    = "𫝆𫞎 姬 and 𡈽 𪧦 and 𠮷田 真",
+  yomi      = "Hime Imahashi",
+  title     = "CJK統合漢字拡張🄑--🄓のテスト --- その🄰",
+  publisher = "冬𠘨𫝷",
+  year      = 2024,
+}
 \end{filecontents}
 
 \documentclass{ltjsarticle}
